--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -177,7 +177,7 @@
     "Use 0 for session only referrals. Use 36500 for 100 year \/ lifetime referrals. If someone makes a purchase within these many days of their first referred visit, affiliate will be credited for the sale.": "استخدم 0 للإحالات الخاصة بالجلسات فقط. استخدم 36500 للإحالات التي تستمر 100 عام\/مدى الحياة. إذا قام شخص ما بعملية شراء خلال هذه الأيام العديدة من زيارته الأولى، فسيتم إضافة مبلغ إلى حساب الشريك مقابل عملية البيع.",
     "Lifetime commissions": "عمولات مدى الحياة",
     "Allow affiliates to receive lifetime commissions": "السماح للمنتسبين بتلقي عمولات مدى الحياة",
-    "Affiliates will receive commissions for every sale made by the same customer linked to this affiliate - without using referral link or coupon.)": "(سيحصل الشركاء على عمولات مقابل كل عملية بيع يقوم بها نفس العميل المرتبط بهذا الشريك - دون استخدام رابط الإحالة أو القسيمة.)",
+    "Affiliates will receive commissions for every sale made by the same customer linked to this affiliate - without using referral link or coupon.)": "(سيحصل الشركاء على عمولات مقابل كل عملية بيع يقوم بها نفس العميل المرتبط بهذا الشريك - دون استخدام رابط الإحالة أو الكوبون.)",
     "Lifetime commissions exclude affiliates tags": "لا تشمل العمولات مدى الحياة علامات الشركات التابعة",
     "Exclude the affiliates either by individual affiliate tags to not give them lifetime commissions.": "استبعد الشركات التابعة إما عن طريق علامات الشركات التابعة الفردية حتى لا تمنحهم عمولات مدى الحياة.",
     "Lifetime commissions exclude affiliates user": "لا تشمل العمولات مدى الحياة المستخدمين التابعين",
@@ -643,42 +643,42 @@
     "Minimum spend must be greater than Discount amount.": "يجب أن يكون الحد الأدنى للإنفاق أكبر من مبلغ الخصم.",
     "Discount :x format is invalid.": "الخصم: تنسيق x غير صالح.",
     "Maximum discount must be greater than 0": "يجب أن يكون الحد الأقصى للخصم أكبر من 0",
-    "Coupon not found.": "القسيمة غير موجودة.",
-    "Invalid coupon code.": "رقم قسيمه غير صالح.",
-    "This coupon is not valid.": "هذه القسيمة غير صالحة.",
-    "This coupon has been expired.": "هذه القسيمة قد انتهت صلاحيتها.",
-    "This coupon is not activated yet.": "لم يتم تفعيل هذه القسيمة بعد.",
-    "You will get :x discount to use the coupon.": "سوف تحصل على: × خصم على استخدام القسيمة.",
-    "You will get :x discount to use the coupon. Up to :y.": "سوف تحصل على: × خصم على استخدام القسيمة. حتى: ذ.",
+    "Coupon not found.": "لا يوجد كوبون",
+    "Invalid coupon code.": "رقم الكوبون غير صالح.",
+    "This coupon is not valid.": "كوبون غير صالح",
+    "This coupon has been expired.": "الكوبون منتهي الصلاحية",
+    "This coupon is not activated yet.": "لم يتم تفعيل هذا الكوبون بعد.",
+    "You will get :x discount to use the coupon.": "سوف تحصل على: × خصم على استخدام الكوبون.",
+    "You will get :x discount to use the coupon. Up to :y.": "سوف تحصل على: × خصم على استخدام الكوبون. حتى: ذ.",
     "You will get :x discount.": "سوف تحصل على: x خصم.",
-    "Coupon not found": "القسيمة غير موجودة",
-    "This coupon is already started.": "هذه القسيمة بدأت بالفعل.",
-    "Coupon Redeem": "استرداد القسيمة",
-    "Coupon Redeem not found.": "القسيمة استرداد غير موجود.",
+    "Coupon not found": "كوبون غير موجود",
+    "This coupon is already started.": "هذا الكوبون نشط فعلا",
+    "Coupon Redeem": "استرداد الكوبون",
+    "Coupon Redeem not found.": "لا يوجد استرداد",
     "Coupon Service": "خدمة الكوبون",
-    "Create Coupon": "إنشاء قسيمة",
-    "Coupon Create": "إنشاء القسيمة",
+    "Create Coupon": "إنشاء كوبون",
+    "Coupon Create": "إنشاء كوبون",
     "Usage Restriction": "قيود الاستخدام",
     "Usage Limit": "حد الاستخدام",
     "The value must be :x than or equal to :y.": "يجب أن تكون القيمة: x أكبر من أو تساوي: y.",
     "less": "أقل",
     "Maximum Discount": "الحد الأقصى للخصم",
     "Allow free shipping": "السماح بالشحن المجاني",
-    "Check this box if the coupon grants free shipping. A free shipping method must be enabled in your shipping zone and be set to require 'a valid free shipping coupon": "حدد هذا المربع إذا كانت القسيمة تمنح شحنًا مجانيًا. يجب تمكين طريقة الشحن المجاني في منطقة الشحن الخاصة بك وتعيينها بحيث تتطلب ';قسيمة شحن مجانية صالحة';",
+    "Check this box if the coupon grants free shipping. A free shipping method must be enabled in your shipping zone and be set to require 'a valid free shipping coupon": "حدد هذا المربع إذا كانت الكوبون تمنح شحنًا مجانيًا. يجب تمكين طريقة الشحن المجاني في منطقة الشحن الخاصة بك وتعيينها بحيث تتطلب ';قسيمة شحن مجانية صالحة';",
     "Expired": "منتهي الصلاحية",
     "Vendor": "مصنع",
     "Products": "منتجات",
     "Minimum Spend": "الحد الأدنى للإنفاق",
-    "You must spend more than or equal this amount to get coupon discount.": "يجب أن تنفق أكثر من أو يساوي هذا المبلغ للحصول على خصم القسيمة.",
-    "How many times this coupon can be used.": "كم مرة يمكن استخدام هذه القسيمة.",
-    "Edit Coupon": "تحرير القسيمة",
-    "Coupon Update": "تحديث القسيمة",
+    "You must spend more than or equal this amount to get coupon discount.": "يجب أن تنفق أكثر من أو يساوي هذا المبلغ للحصول على خصم الكوبون.",
+    "How many times this coupon can be used.": "كم مرة يمكن استخدام هذا الكوبون .",
+    "Edit Coupon": "تعديل الكوبون ",
+    "Coupon Update": "تعديل الكوبون ",
     "Shop": "مصنع",
     "Coupons": "كوبونات",
     ":x List": ": x قائمة",
     "Print Date": "تاريخ الطباعة",
     "Coupon Redeems": "قسيمة التعويضات",
-    "Check this box if the coupon grants free shipping.": "حدد هذا المربع إذا كانت القسيمة تمنح الشحن المجاني.",
+    "Check this box if the coupon grants free shipping.": "حدد هذا المربع إذا كانت الكوبون تمنح الشحن المجاني.",
     "A free shipping method must be enabled in your shipping zone and require a valid free shipping coupon": "يجب تمكين طريقة الشحن المجاني في منطقة الشحن الخاصة بك وتتطلب قسيمة شحن مجانية صالحة",
     " see the Free Shipping Requires setting.": " انظر إعداد متطلبات الشحن المجاني.",
     "see the Free Shipping Requires setting.": "راجع الإعداد يتطلب الشحن المجاني.",
@@ -1298,7 +1298,7 @@
     "Tagged Products Report": "تقرير المنتجات الموسومة",
     "Search Report": "تقرير البحث",
     "Sale Report": "تقرير البيع",
-    "Coupon Name": "اسم القسيمة",
+    "Coupon Name": " اسم الكوبون",
     "Coupon Code": "رمز الكوبون",
     "Total Product": "إجمالي المنتج",
     "Qty": "الكمية",
@@ -1372,7 +1372,7 @@
     "Free shipping requires": "يتطلب الشحن المجاني",
     "Minimum order amount": "الحد الأدنى للطلب",
     "Coupons discounts": "خصومات القسائم",
-    "Apply minimum order rule before coupon discount": "تطبيق قاعدة الحد الأدنى للطلب قبل خصم القسيمة",
+    "Apply minimum order rule before coupon discount": "تطبيق قاعدة الحد الأدنى للطلب قبل خصم الكوبون",
     "Tax Status": "الوضع الضريبي",
     "Name will show in your product create or edit shipping section": "سيظهر الاسم في إنشاء منتجك أو تحرير قسم الشحن",
     "Slug should not be empty.": "يجب ألا تكون البزاقة فارغة.",
@@ -1395,7 +1395,7 @@
     "Leave blank to apply to all areas.": "اتركه فارغا لتطبيقه على جميع المجالات.",
     "ZIP should be area zip code.": "يجب أن يكون الرمز البريدي للمنطقة هو الرمز البريدي.",
     "Zone => Free Shipping": "المنطقة => شحن مجاني",
-    "User can see the title when shpping is apply in cart section.": "يمكن للمستخدم رؤية العنوان عند تطبيق shpping في قسم السلى.",
+    "User can see the title when shpping is apply in cart section.": "يمكن للمستخدم رؤية العنوان عند تطبيق shpping في قسم السلة.",
     "Free Shipping require": "يتطلب الشحن المجاني",
     "Free shipping condition.": "حالة الشحن المجاني.",
     "User can see only active status shipping method in cart section.": "يمكن للمستخدم رؤية طريقة شحن الحالة النشطة فقط في قسم سلة التسوق.",
@@ -1838,7 +1838,7 @@
     "Action name required.": "اسم الإجراء مطلوب.",
     "Invalid data": "بيانات غير صالحة",
     "Address does not found.": "لم يتم العثور على العنوان.",
-    "Products added to cart successfully.": "تمت إضافة المنتجات إلى السلى بنجاح.",
+    "Products added to cart successfully.": "تمت إضافة المنتجات إلى السلة بنجاح.",
     "This product is facing license validation issue. Please contact admin to fix the issue.": "هذا المنتج يواجه مشكلة التحقق من صحة الترخيص. يرجى الاتصال بالمسؤول لإصلاح المشكلة.",
     "Order not found.": "الطلب غير موجود.",
     "Please select correct address.": "الرجاء تحديد العنوان الصحيح.",
@@ -1933,7 +1933,7 @@
     "Commission update failed.": "فشل تحديث اللجنة.",
     "Product setting": "إعداد المنتج",
     "You can not delete this :x.": "لا يمكنك حذف هذا: x.",
-    "Failed to added to cart! please try again.": "فشل الإضافة إلى السلى! حاول مرة اخرى.",
+    "Failed to added to cart! please try again.": "فشل الإضافة إلى السلة! حاول مرة اخرى.",
     "Failed to added in compare list! try again.": "فشل الإضافة في قائمة المقارنة! حاول مرة أخرى.",
     "Product successfully added in compare list.": "تمت إضافة المنتج بنجاح في قائمة المقارنة.",
     "Already added. Try another one.": "تم الاضافة مسبقا. جرب واحدة أخرى.",
@@ -2165,16 +2165,16 @@
     "Email can not be sent, please contact with admin.": "لا يمكن إرسال البريد الإلكتروني ، يرجى التواصل مع المسؤول.",
     "Download expiry": "انتهاء صلاحية التنزيلات",
     "Vendor email not found.": "لم يتم العثور على البريد الإلكتروني للبائع.",
-    "Failed to added to cart! try again.": "فشل الإضافة إلى السلى! حاول مرة أخرى.",
+    "Failed to added to cart! try again.": "فشل الإضافة إلى السلة! حاول مرة أخرى.",
     "Stock is not available.": "المخزون غير متوفر.",
     "Product successfully added to your cart.": "تمت إضافة المنتج بنجاح إلى سلة التسوق الخاصة بك.",
     "Saved Successfully.": "حفظ بنجاح.",
     "Saved Successfully": "حفظ بنجاح",
-    "This coupon has already been applied.": "تم بالفعل تطبيق هذه القسيمة.",
+    "This coupon has already been applied.": "تم بالفعل تطبيق هذه الكوبون.",
     "Select a product first!": "حدد المنتج أولا!",
     "Errors": "أخطاء",
-    "You have to spend more :x to avail this coupon.": "عليك أن تنفق أكثر: x للاستفادة من هذه القسيمة.",
-    "Coupon usage limit has been reached.": "تم الوصول إلى حد استخدام القسيمة.",
+    "You have to spend more :x to avail this coupon.": "عليك أن تنفق أكثر: x للاستفادة من هذه الكوبون.",
+    "Coupon usage limit has been reached.": "تم الوصول إلى حد استخدام الكوبون.",
     "Shipping & Delivery": "الشحن والتسليم",
     "Service": "خدمة",
     "Variations": "الاختلافات",
@@ -2259,8 +2259,8 @@
     "Go to Checkout": "اذهب إلى الدفع",
     "Clear All": "امسح الكل",
     "Empty!": "فارغة!",
-    "Congrats you are eligible for this coupon in this order.": "تهانينا ، أنت مؤهل للحصول على هذه القسيمة بهذا الطلب.",
-    "Click to delete the coupon.": "انقر لحذف القسيمة.",
+    "Congrats you are eligible for this coupon in this order.": "تهانينا ، أنت مؤهل للحصول على هذه الكوبون بهذا الطلب.",
+    "Click to delete the coupon.": "انقر لحذف الكوبون.",
     "Default address not found! Please create a address & make it default": "العنوان الافتراضي غير موجود! يرجى إنشاء عنوان وجعله افتراضيًا",
     "Make Payment": "إدفع",
     "Good Morning": "صباح الخير",
@@ -2654,7 +2654,7 @@
     "Pay. Scenario": "يدفع. سيناريو",
     "Partial": "جزئي",
     "Order Invoice": "فاتورة الطلب",
-    "Coupon offer": "عرض القسيمة",
+    "Coupon offer": "عرض الكوبون",
     "Delivery Details": "تفاصيل التسليم",
     "Shipping Address": "عنوان الشحن",
     "Street Address": "عنوان الشارع",
@@ -2671,7 +2671,7 @@
     "Resend Order Email (Vendor)": "إعادة إرسال البريد الإلكتروني لطلب الشراء (البائع)",
     "Completed": "مكتمل",
     "Refunded": "معاد",
-    "Apply Coupon": "تطبيق القسيمة",
+    "Apply Coupon": "تطبيق الكوبون",
     "Delivery Time": "موعد التسليم",
     "Delivery date": "تاريخ التسليم او الوصول",
     "Downloadable Product Permission": "إذن المنتج القابل للتنزيل",
@@ -2724,8 +2724,8 @@
     "External\/Affilate product.": "منتج خارجي \/ تابع.",
     "Variable product.": "منتج متغير.",
     "Rates will be configurable and taxes will be calculated during checkout.": "ستكون الأسعار قابلة للتهيئة وسيتم احتساب الضرائب أثناء الخروج.",
-    "Calculate coupon discounts sequentially": "احسب خصومات القسيمة بالتسلسل",
-    "When applying multiple coupons, apply the first coupon to the full price and the second coupon to the discounted price, and so on.": "عند تطبيق قسائم متعددة ، قم بتطبيق الكوبون الأول على السعر الكامل والقسيمة الثانية على السعر المخفض ، وهكذا.",
+    "Calculate coupon discounts sequentially": "احسب خصومات الكوبون بالتسلسل",
+    "When applying multiple coupons, apply the first coupon to the full price and the second coupon to the discounted price, and so on.": "عند تطبيق قسائم متعددة ، قم بتطبيق الكوبون الأول على السعر الكامل والكوبون الثانية على السعر المخفض ، وهكذا.",
     "Measurements": "قياسات",
     "Weight unit": "وحدة الوزن",
     "Dimension unit": "وحدة الأبعاد",
@@ -3085,7 +3085,7 @@
     "Continue Shopping": "مواصلة التسوق",
     "Order Summary": "ملخص الطلب",
     "Have a coupon? Apply Now.": "هل لديك قسيمة؟ قدم الآن.",
-    "Type Coupon Code": "اكتب رمز القسيمة",
+    "Type Coupon Code": "اكتب رمز الكوبون",
     "Accepted payment method": "طريقة الدفع المقبولة",
     "Product Compare List": "قائمة مقارنة المنتج",
     "Multivendor Ecommerce store": "متجر التجارة الإلكترونية متعدد البائعين",
@@ -3102,7 +3102,7 @@
     "A revolution in the e-commerce industry since year.": "ثورة في صناعة التجارة الإلكترونية منذ عام.",
     "The best online shopping experience.": "أفضل تجربة تسوق عبر الإنترنت.",
     "We know you love coupons and that’s why we always come up with various offers, events and vouchers, to make your shopping experience much more exciting.": "نحن نعلم أنك تحب الكوبونات ولهذا السبب نأتي دائمًا بالعروض والأحداث والقسائم المختلفة ، لجعل تجربة التسوق الخاصة بك أكثر إثارة.",
-    "Copy the coupon codes and use it on the cart page before checkout out.": "انسخ أكواد القسيمة واستخدمها على صفحة السلى قبل الخروج.",
+    "Copy the coupon codes and use it on the cart page before checkout out.": "انسخ أكواد الكوبون واستخدمها على صفحة السلة قبل الخروج.",
     "gifts": "الهدايا",
     "Exclusive offers for": "عروض حصرية لـ",
     "Our customers": "عملائنا",
@@ -3152,10 +3152,10 @@
     "Sorry, nothing found for": "عذرا، لم يتم العثور على شيء",
     "Popular Search": "البحث الشائع",
     "Seller\/Vendor": "البائع\/المصنع",
-    "Your Cart": "السلى",
-    "Shopping Cart": "السلى",
-    "Your cart is empty": "السلى فارغة",
-    "No items added in your cart. Please add product to your cart list.": "لا توجد عناصر مضافة في سلة التسوق الخاصة بك. الرجاء إضافة المنتج إلى قائمة السلى الخاصة بك.",
+    "Your Cart": "السلة",
+    "Shopping Cart": "السلة",
+    "Your cart is empty": "السلة فارغة",
+    "No items added in your cart. Please add product to your cart list.": "لا توجد عناصر مضافة في سلة التسوق الخاصة بك. الرجاء إضافة المنتج إلى قائمة السلة الخاصة بك.",
     "Sign Up": "اشتراك",
     "Use Phone Instead": "استخدم الهاتف بدلا من ذلك",
     "Use Email Instead": "استخدم البريد الإلكتروني بدلاً من ذلك",
@@ -3186,7 +3186,7 @@
     "Search your keyword": "ابحث في كلمتك الرئيسية",
     "popular post": "منشور مشهور",
     "Year": "عام",
-    "This is a grouped product. Add to your cart what you want.": "هذا منتج مجمع. أضف إلى السلى ما تريد.",
+    "This is a grouped product. Add to your cart what you want.": "هذا منتج مجمع. أضف إلى السلة ما تريد.",
     "Delivery Options": "خيارات التسليم",
     "Search your country": "ابحث في بلدك",
     "Search your state": "ابحث عن دولتك",
@@ -3263,7 +3263,7 @@
     "Use the default address in the future.": "استخدم العنوان الافتراضي في المستقبل.",
     "Ship to a different address?": "هل تريد الشحن إلى عنوان مختلف؟",
     "Delivery Instructions": "تعليمات التوصيل",
-    "Back to Cart": "العودة إلى السلى",
+    "Back to Cart": "العودة إلى السلة",
     "Order Confirmation": "تأكيد الطلب",
     "Thank you. Your order has been received.": "شكرًا لك. تم استلام طلبك.",
     "Order Number": "رقم الأمر",
@@ -3381,7 +3381,7 @@
     "Service Unavailable": "الخدمة غير متوفرة",
     "There was an error on row :row. :message": "حدث خطأ في الصف: الصف. :رسالة",
     "Are you sure to delete this page?": "هل أنت متأكد من حذف هذه الصفحة؟",
-    "Check this box if the coupon grants free shipping. A free shipping method must be enabled in your shipping zone and be set to require \"a valid free shipping coupon\"": "حدد هذا المربع إذا كانت القسيمة تمنح الشحن المجاني. يجب تمكين طريقة الشحن المجاني في منطقة الشحن الخاصة بك وضبطها للمطالبة بـ 'قسيمة شحن مجاني صالحة'",
+    "Check this box if the coupon grants free shipping. A free shipping method must be enabled in your shipping zone and be set to require \"a valid free shipping coupon\"": "حدد هذا المربع إذا كانت الكوبون تمنح الشحن المجاني. يجب تمكين طريقة الشحن المجاني في منطقة الشحن الخاصة بك وضبطها للمطالبة بـ 'قسيمة شحن مجاني صالحة'",
     "To confirm, type \"import\"": "للتأكيد اكتب 'استيراد'",
     "Update Refund Request": "تحديث طلب رد الأموال",
     "Are you sure to change refund status?": "هل أنت متأكد من تغيير حالة الاسترداد؟",
@@ -3811,7 +3811,7 @@
     "Here is what's happening with your profile today..": "إليك ما يحدث مع ملفك الشخصي اليوم ..",
     "Your Wishlist": "قائمة امنياتك",
     "Your Reviews": "تعليقاتك",
-    "Product in cart": "المنتج في السلى",
+    "Product in cart": "المنتج في السلة",
     "Last Orders": "الطلبات الأخيرة",
     "Invoice No": "رقم الفاتورة",
     "Order number": "رقم الأمر",
