--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -882,7 +882,7 @@
     "currency": "عملة",
     "Choose Payments from below": "اختر المدفوعات من الأسفل",
     "Payment cancelled.": "تم إلغاء الدفع.",
-    "Payment": "قسط",
+    "Payment": "الدفع",
     "Back": "خلف",
     "Logo": "شعار",
     "Already paid for the order.": "دفعت بالفعل للطلب.",
@@ -1191,7 +1191,7 @@
     "Home": "الرئيسية",
     "Product Details": "تفاصيل المنتج",
     "Cart": "السلة",
-    "Checkout": "الدفع",
+    "Checkout": "إتمام الشراء",
     "Confirm Order": "أكد الطلب",
     "Color": "اللون",
     "Top Left": "أعلى اليسار",
@@ -2251,12 +2251,12 @@
     "Resend Code": "أعد إرسال الرمز",
     "Please select some product options before adding this product to your cart.": "الرجاء تحديد بعض خيارات المنتج قبل إضافة هذا المنتج إلى سلة التسوق الخاصة بك.",
     "Please select a product first!": "الرجاء تحديد منتج أولا!",
-    "Proceed to Checkout": "باشرالخروج من الفندق",
+    "Proceed to Checkout": "إتمام الشراء",
     "Add to Cart": "إضافة للسلة",
     "All product": "كل المنتجات",
     "has been added to cart.": "تمت إضافته إلى السلة.",
     "View Cart": "عرض السلة",
-    "Go to Checkout": "اذهب إلى الدفع",
+    "Go to Checkout": "إتمام الشراء",
     "Clear All": "امسح الكل",
     "Empty!": "فارغة!",
     "Congrats you are eligible for this coupon in this order.": "تهانينا ، أنت مؤهل للحصول على هذه الكوبون بهذا الطلب.",
@@ -2662,7 +2662,7 @@
     "Province": "مقاطعة",
     "ESTIMATED DELIVERY TIME": "يقدر وقت التسليم",
     "Office Days": "أيام المكتب",
-    "PAYMENT": "قسط",
+    "PAYMENT": "الدفع",
     "View :x": "طريقة العرض: x",
     "Please let me know, why are you want to refund this item.": "يرجى إعلامي ، لماذا تريد استرداد هذا العنصر.",
     "Fee": "مصاريف",
@@ -2723,7 +2723,7 @@
     "Grouped product.": "منتج مجمع.",
     "External\/Affilate product.": "منتج خارجي \/ تابع.",
     "Variable product.": "منتج متغير.",
-    "Rates will be configurable and taxes will be calculated during checkout.": "ستكون الأسعار قابلة للتهيئة وسيتم احتساب الضرائب أثناء الخروج.",
+    "Rates will be configurable and taxes will be calculated during checkout.": "سيتم تحديد الأسعار وسيتم احتساب الضرائب أثناء الدفع.",
     "Calculate coupon discounts sequentially": "احسب خصومات الكوبون بالتسلسل",
     "When applying multiple coupons, apply the first coupon to the full price and the second coupon to the discounted price, and so on.": "عند تطبيق قسائم متعددة ، قم بتطبيق الكوبون الأول على السعر الكامل والكوبون الثانية على السعر المخفض ، وهكذا.",
     "Measurements": "قياسات",
@@ -3102,7 +3102,7 @@
     "A revolution in the e-commerce industry since year.": "ثورة في صناعة التجارة الإلكترونية منذ عام.",
     "The best online shopping experience.": "أفضل تجربة تسوق عبر الإنترنت.",
     "We know you love coupons and that’s why we always come up with various offers, events and vouchers, to make your shopping experience much more exciting.": "نحن نعلم أنك تحب الكوبونات ولهذا السبب نأتي دائمًا بالعروض والأحداث والقسائم المختلفة ، لجعل تجربة التسوق الخاصة بك أكثر إثارة.",
-    "Copy the coupon codes and use it on the cart page before checkout out.": "انسخ أكواد الكوبون واستخدمها على صفحة السلة قبل الخروج.",
+    "Copy the coupon codes and use it on the cart page before checkout out.": "انسخ أكواد الكوبون واستخدمها على صفحة السلة قبل الدفع.",
     "gifts": "الهدايا",
     "Exclusive offers for": "عروض حصرية لـ",
     "Our customers": "عملائنا",
@@ -3179,7 +3179,7 @@
     "Create account": "إنشاء حساب",
     "or create account with": "أو إنشاء حساب مع",
     "MY CART": "عربتي",
-    "CHECKOUT": "الدفع",
+    "CHECKOUT": "إتمام الشراء",
     "ORDER COMPLETE": "الطلب جاهز",
     "Offer end in": "عرض ينتهي في",
     "Only :x left in stock.": "فقط: بقي x في المخزن.",
