--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -3080,7 +3080,7 @@
     "Select All": "اختر الكل",
     "Delete All": "حذف الكل",
     "Save for later": "احفظ لوقت لاحق",
-    "Delete item": "حذف البند",
+    "Delete item": "حذف",
     "Not Available.": "غير متوفر.",
     "Continue Shopping": "مواصلة التسوق",
     "Order Summary": "ملخص الطلب",
