--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -3178,7 +3178,7 @@
     "terms & conditions": "الأحكام والشروط",
     "Create account": "إنشاء حساب",
     "or create account with": "أو إنشاء حساب مع",
-    "MY CART": "عربتي",
+    "MY CART": "سلتي",
     "CHECKOUT": "إتمام الشراء",
     "ORDER COMPLETE": "الطلب جاهز",
     "Offer end in": "عرض ينتهي في",
