--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -252,7 +252,9 @@
     "SWIFT Code": "رمز السرعة",
     "Branch Address": "عنوان فرع",
     "Bank Name": "اسم البنك",
-    "Country": "دولة",
+    "Country": "الدولة",
+    "Contact Information": "معلومات الاتصال",
+    "Quotation Details": "التفاصيل",
     "Your affiliate identifier is": "معرف الشريك الخاص بك هو",
     "Ok": "موافق",
     "You can change above identifier to anything like your name, brand name.": "يمكنك تغيير المعرف أعلاه إلى أي شيء مثل اسمك أو اسم علامتك التجارية.",
@@ -270,8 +272,8 @@
     "You can withdraw your commission not more than :x": "لا يمكنك سحب عمولتك أكثر من :x",
     "Submit": "يُقدِّم",
     "Please Configure payout first": "يرجى تكوين الدفعة أولاً",
-    "Category": "فئة",
-    "Category.": "فئة.",
+    "Category": "التصنيف",
+    "Category.": "التصنيف.",
     "Show": "تبين",
     "Blog": "مدونة او مذكرة",
     "Title": "لقب",
@@ -408,6 +410,7 @@
     "No. of brands to show": "عدد الماركات المراد عرضها",
     "Total brands to display should be between 3 to 20. Default is 9": "يجب أن يكون إجمالي العلامات التجارية المراد عرضها بين 3 إلى 20. الإعداد الافتراضي هو 9",
     "Category Type": "نوع الفئة",
+    "Upload RFQs": "أرفق ملف RFQs",
     "Categories": "التصنيفات",
     "Options": "خيارات",
     "Category Grid (Row X Col)": "شبكة الفئة (الصف X العمود)",
@@ -445,7 +448,7 @@
     "Select block type": "حدد نوع الكتلة",
     "Design of the section.": "تصميم القسم.",
     "Section BLock": "قسم بلوك",
-    "Select": "يختار",
+    "Select": "إختر",
     "Loading": "تحميل",
     "Select Slider": "حدد شريط التمرير",
     "Appearance": "مظهر خارجي",
@@ -1231,6 +1234,8 @@
     "Invoice": "فاتورة",
     "History": "تاريخ",
     "Created": "مخلوق",
+    "Create RFQs": "إنشاء طلب سعر",
+    "Fill out the form below to submit your quotation request": " أدخل البيانات التالية لإرسال طلب السعر",
     "POS": "نقاط البيع",
     "Address not found.": "لم يتم العثور على العنوان.",
     "Invalid discount": "خصم غير صالح",
@@ -1241,7 +1246,13 @@
     "here": "هنا",
     "POS addon verified successfully": "تم التحقق من إضافة نقاط البيع بنجاح",
     "This Addon is facing license validation issue. Please contact admin to fix the issue.": "تواجه هذه الوظيفة الإضافية مشكلة في التحقق من الترخيص. يرجى الاتصال بالمسؤول لإصلاح المشكلة.",
-    "Phone Number": "رقم التليفون",
+    "Phone Number": "رقم الهاتف",
+    "Submit Quotation": "أرسل طلب السعر",
+    "Click to upload": "اضغط لاضافة ملف",
+    "or drag and drop": "أو اسحب وأفلت",
+    "PDF files only, maximum 10MB": "يجب أن يكون الملف من نوع PDF وأقصى حد 10MB",
+    "Additional Notes": " ملاحظات إضافية",
+    "Enter any additional notes, requirements, or special instructions...": "أدخل أي ملاحظات إضافية، أو أي متطلبات أو أي تعليمات خاصة...",
     "Gender": "جنس تذكير أو تأنيث",
     "Visible": "مرئي",
     "Setup": "يثبت",
@@ -3256,6 +3267,7 @@
     "Old Password": "كلمة المرور القديمة",
     "New Password": "كلمة مرور جديدة",
     "Check Out": "الدفع",
+    "Personal Information": "المعلومات الشخصية",
     "Your Addresses": "عناوينك",
     "Guest Address": "عنوان الضيف",
     "Please select an address": "الرجاء تحديد عنوان",
