--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -230,7 +230,14 @@
     "Design of the section.": "Design of the section.",
     "Section BLock": "Section BLock",
     "Select": "Select",
+    "Upload RFQs": "Upload RFQs",
+    "Click to upload": "Click to upload",
+    "or drag and drop": "or drag and drop",
+    "PDF files only, maximum 10MB": "PDF files only, maximum 10MB",
     "Loading": "Loading",
+    "Create RFQs": "Create RFQs",
+    "Additional Notes": "Additional Notes",
+    "Enter any additional notes, requirements, or special instructions...": "Enter any additional notes, requirements, or special instructions...",
     "Select Slider": "Select Slider",
     "Appearance": "Appearance",
     "Full Width": "Full Width",
@@ -765,6 +772,9 @@
     "Quantity": "Quantity",
     "Transaction Type": "Transaction Type",
     "Price": "Price",
+    "Personal Information": "Personal Information",
+    "Contact Information": "Contact Information",
+    "Quotation Details": "Quotation Details",
     "Log Type": "Log Type",
     "Origin": "Origin",
     "Destination": "Destination",
