--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -242,7 +242,8 @@
     "Your submitted form is under review. Please wait for confirmation.": "النموذج الذي أرسلته قيد المراجعة. يرجى الانتظار للتأكيد.",
     "Please be an affiliate user for unlock affiliate feature.": "يرجى أن تكون مستخدمًا تابعًا لإلغاء قفل ميزة الشريك.",
     "Payments": "المدفوعات",
-    "Email": "بريد إلكتروني",
+    "Email": "البريد الإلكتروني",
+    "Email address": "البريد الإلكتروني",
     "Enter a valid :x.": "أدخل صالحًا: x.",
     "Default": "تقصير",
     "Bank Account Holder's name": "اسم صاحب حساب البنك",
@@ -1228,6 +1229,18 @@
     "Subscription": "الاشتراك",
     "Edit Popup": "تحرير منبثقة",
     "Popup Edit": "تحرير منبثق",
+    "Welcome Back": "مرحبا بعودتك",
+    "Enter Password": "أدخل كلمة المرور",
+    "Choose your account type to get started": "اختر نوع حسابك ",
+    "Sign up as a buyer": "إنشاء حساب كمشتري",
+    "I plan to purchase the products": "أخطط لشراء المنتجات",
+    "Sign up as a Factory": "إنشاء حساب كمصنع",
+    "I plan to sell products": "أخطط لبيع المنتجات",
+    "Already have an account?": "هل لديك حساب؟",
+    "Enter your email and password to access your account": "أدخل بريدك الإلكتروني وكلمة المرور",
+    "sign in": "تسجيل الدخول",
+    "sign up": "إنشاء حساب",
+    "Forgot Password?": "هل نسيت كلمة المرور؟",
     "Popups": "تظهر ظهور مفاجئ",
     "View Popup": "مشاهدة ملف Popup",
     "Orders": "الطلب #٪ s",
@@ -1260,7 +1273,7 @@
     "Both": "كلاهما",
     "First Name": "الاسم الأول",
     "Last Name": "اسم العائلة",
-    "Email Address": "عنوان البريد الالكترونى",
+    "Email Address": " البريد الالكترونى",
     "Street Address 1": "عنوان الشارع 1",
     "Street Address 2": "عنوان الشارع 2",
     "Zip Code": "الرمز البريدي",
@@ -1961,7 +1974,6 @@
     "Email already has been taken.": "تم أخذ البريد الإلكتروني بالفعل.",
     "Email address or phone does not exist in the system.": "عنوان البريد الإلكتروني أو الهاتف غير موجود في النظام.",
     "Please enter a valid :x.": "الرجاء إدخال :x صالح.",
-    "Email address": "عنوان البريد الالكترونى",
     "Password reset link sent to your :x.": "تم إرسال رابط إعادة تعيين كلمة المرور إلى :x الخاص بك.",
     "Please verify your email address or phone.": "يرجى التحقق من عنوان بريدك الإلكتروني أو هاتفك.",
     "Password reset link sent to your phone": "تم إرسال رابط إعادة تعيين كلمة المرور إلى هاتفك",
