--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -230,6 +230,18 @@
     "Design of the section.": "Design of the section.",
     "Section BLock": "Section BLock",
     "Select": "Select",
+    "Welcome Back": "Welcome Back",
+    "Enter your email and password to access your account": "Enter your email and password to access your account",
+    "sign in": "sign in",
+    "sign up": "sign up",
+    "Forgot Password?": "Forgot Password?",
+    "Enter Password": "Enter Password",
+    "Choose your account type to get started": "Choose your account type to get started",
+    "Sign up as a buyer": "Sign up as a buyer",
+    "I plan to purchase the products": "I plan to purchase the products",
+    "Sign up as a Factory": "Sign up as a Factory",
+    "I plan to sell products": "I plan to sell products",
+    "Already have an account?": "Already have an account?",
     "Upload RFQs": "Upload RFQs",
     "Click to upload": "Click to upload",
     "or drag and drop": "or drag and drop",
