--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -2444,7 +2444,15 @@
     "Forgot password?": "هل نسيت كلمة السر؟",
     "Sign in with demo account": "تسجيل الدخول بحساب تجريبي",
     "VENDOR": "بائع",
+    "Create Buyer Account": "أنشئ حساب المشتري",
+    "Already have an account? Login": "هل لديك حساب؟ تسجيل الدخول",
+    "Buyer Registration": "تسجيل المشتري",
+    "Create your buyer account to start purchasing": "أنشئ حسابك المشتري لبدء الشراء",
     "Login": "تسجيل الدخول",
+    "I agree to the": "أنا أوافق على",
+    "Terms and Conditions": "الشروط والأحكام",
+    "Privacy Policy": "سياسة الخصوصية",
+    "Business Information": "معلومات العمل",
     "RESET YOUR PASSWORD": "اعد ضبط كلمه السر",
     "Enter your email to send password reset link": "أدخل بريدك الإلكتروني لإرسال رابط إعادة تعيين كلمة المرور",
     "Click here to": "انقر هنا ل",
