--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -2440,6 +2440,7 @@
     "Log In": "تسجيل الدخول",
     "Sign In": "تسجيل الدخول",
     "password": "كلمة المرور",
+    "Factories": "المصانع",
     "Remember Me": "تذكرنى",
     "Forgot password?": "هل نسيت كلمة السر؟",
     "Sign in with demo account": "تسجيل الدخول بحساب تجريبي",
