--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -678,6 +678,7 @@
     "Edit Coupon": "تعديل الكوبون ",
     "Coupon Update": "تعديل الكوبون ",
     "Shop": "مصنع",
+    "My Shop": "متجري",
     "Coupons": "كوبونات",
     ":x List": ": x قائمة",
     "Print Date": "تاريخ الطباعة",
