--- a/resources/lang/be.json
+++ b/resources/lang/be.json
@@ -15,6 +15,7 @@
     "Addon successfully removed.": "Надбудова паспяхова выдалена.",
     "Choose file": "Выберыце файл",
     "Addons": "Адоны",
+    "My Shop": "Мія крама",
     "Upload Addon": "Загрузіць адон",
     "Upload Zip File": "Загрузіць файл Zip",
     "Browse": "Праглядзіце",
