--- a/resources/lang/bg.json
+++ b/resources/lang/bg.json
@@ -18,6 +18,7 @@
     "Upload Addon": "Качване на добавка",
     "Upload Zip File": "Качете Zip файл",
     "Browse": "Прегледайте",
+    "My Shop": "Моят магазин",
     "Note": "Забележка",
     "Upload your addon zip file.": "Качете вашия zip файл на добавката.",
     "Cancel": "Отказ",
