--- a/resources/lang/bn.json
+++ b/resources/lang/bn.json
@@ -19,6 +19,7 @@
     "Upload Zip File": "জিপ ফাইল আপলোড করুন",
     "Browse": "ব্রাউজ করুন",
     "Note": "বিঃদ্রঃ",
+    "My Shop": "আমার দোকান",
     "Upload your addon zip file.": "আপনার অ্যাডন জিপ ফাইল আপলোড করুন।",
     "Cancel": "বাতিল",
     "Upload Now": "এখন আপলোড করুন",
