--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -492,6 +492,7 @@
     "Coupon Update": "Coupon Update",
     "Check this box if the coupon grants free shipping. A free shipping method must be enabled in your shipping zone and be set to require \"a valid free shipping coupon\"": "Check this box if the coupon grants free shipping. A free shipping method must be enabled in your shipping zone and be set to require \"a valid free shipping coupon\"",
     "Shop": "Shop",
+    "My Shop": "My Shop",
     "Coupons": "Coupons",
     ":x List": ":x List",
     "Print Date": "Print Date",
