--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -23,6 +23,7 @@
     "Cancel": "annuleren",
     "Upload Now": "Upload nu",
     "All": "Alle",
+    "My Shop": "Mijn winkel",
     "Active": "Actief",
     "Inactive": "Inactief",
     "Explore Available Addons": "Ontdek beschikbare add-ons",
