--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -19,6 +19,7 @@
     "Upload Zip File": "Téléchargez le fichier zip",
     "Browse": "Parcourir",
     "Note": "Noter",
+    "My Shop": "Mon magasin",
     "Upload your addon zip file.": "Téléchargez votre fichier zip addon.",
     "Cancel": "Annuler",
     "Upload Now": "Télécharger maintenant",
