--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -19,6 +19,7 @@
     "Upload Zip File": "Zipファイルをアップロード",
     "Browse": "ブラウズ",
     "Note": "注意",
+    "My Shop": "マイショップ",
     "Upload your addon zip file.": "アドオンの zip ファイルをアップロードします。",
     "Cancel": "キャンセル",
     "Upload Now": "今すぐアップロード",
