--- a/resources/lang/zh.json
+++ b/resources/lang/zh.json
@@ -23,6 +23,7 @@
     "Cancel": "取消",
     "Upload Now": "立即上传",
     "All": "全部",
+    "My Shop": "我的商店",
     "Active": "积极的",
     "Inactive": "不活跃",
     "Explore Available Addons": "探索可用的附加组件",
