--- a/resources/lang/be.json
+++ b/resources/lang/be.json
@@ -16,6 +16,7 @@
     "Choose file": "Выберыце файл",
     "Addons": "Адоны",
     "My Shop": "Мія крама",
+    "About Us": "Аб нас",
     "Upload Addon": "Загрузіць адон",
     "Upload Zip File": "Загрузіць файл Zip",
     "Browse": "Праглядзіце",
