--- a/resources/lang/bg.json
+++ b/resources/lang/bg.json
@@ -19,6 +19,7 @@
     "Upload Zip File": "Качете Zip файл",
     "Browse": "Прегледайте",
     "My Shop": "Моят магазин",
+    "About Us": "За нас",
     "Note": "Забележка",
     "Upload your addon zip file.": "Качете вашия zip файл на добавката.",
     "Cancel": "Отказ",
