--- a/resources/lang/ca.json
+++ b/resources/lang/ca.json
@@ -19,6 +19,7 @@
     "Upload Zip File": "Carregueu un fitxer zip",
     "Browse": "Navega",
     "Note": "Nota",
+    "About Us": "Sobre nosaltres",
     "My Shop": "El meu magatzem",
     "Upload your addon zip file.": "Carregueu el fitxer zip del vostre complement.",
     "Cancel": "Cancel · lar",
