--- a/resources/lang/et.json
+++ b/resources/lang/et.json
@@ -19,6 +19,7 @@
     "Upload Zip File": "Laadige üles ZIP-fail",
     "Browse": "Sirvige",
     "Note": "Märge",
+    "About Us": "Meist",
     "My Shop": "Minu pood",
     "Upload your addon zip file.": "Laadige üles oma lisandmooduli ZIP-fail.",
     "Cancel": "Tühista",
