--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -25,6 +25,14 @@
     "Upload Now": "تحميل الآن",
     "All": "الجميع",
     "Active": "نشيط",
+    "Show company description": "عرض وصف الشركة",
+    "Show visit stats": "عرض احصائيات الزيارة",
+    "Show profile": "عرض البروفايل",
+    "Upload catalog": "رفع كتالوج",
+    "Buyer direct chat": "تواصل المشترين مباشر داخل المنصة",
+    "SEO optimization": "تحسين محرك البحث",
+    "Post news inside the platform": "نشر الاخبار داخل المنصة",
+    "RFQ priority": "اولوية التواصل مع طلبات عروض الاسعار",
     "Inactive": "غير نشط",
     "Explore Available Addons": "استكشف الإضافات المتاحة",
     "Search addon": "البحث الملحق",
