--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -12,6 +12,14 @@
     "Can not be deleted. This is core addon.": "Can not be deleted. This is core addon.",
     "Addon successfully removed.": "Addon successfully removed.",
     "Choose file": "Choose file",
+    "Show company description": "Show company description",
+    "Show visit stats": "Show visit stats",
+    "Show profile": "Show profile",
+    "Upload catalog": "Upload catalog",
+    "Buyer direct chat": "Buyer direct chat",
+    "SEO optimization": "SEO optimization",
+    "Post news inside the platform": "Post news inside the platform",
+    "RFQ priority": "RFQ priority",
     "Addons": "Addons",
     "Upload Addon": "Upload Addon",
     "Upload Zip File": "Upload Zip File",
